# ogiri

./: .editorconfig  .gitattributes  .gitignore  .jitpack.yml  .sdkmanrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  MIGRATION.md  PLAN-bean-tooling-improvements.md  PLAN-update-samples.md  PUBLISHING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  jitpack.yml  lefthook.yml  mkdocs.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release.gradle.kts  settings.gradle.kts  spotless.license.kt  test-samples.sh  versions.json
.claude/: settings.json
.github/: dependabot.yml
1.1.1/: 404.html  index.html  sitemap.xml
1.2.0/: 404.html  index.html  sitemap.xml
1.2.1/: 404.html  index.html  sitemap.xml
1.3.0/: 404.html  index.html  sitemap.xml
1.4.0/: 404.html  index.html  sitemap.xml
1.4.1/: 404.html  index.html  sitemap.xml
2.0/: 404.html  index.html  sitemap.xml
2.1/: 404.html  index.html  sitemap.xml
3.0/: 404.html  index.html  sitemap.xml
3.1/: 404.html  index.html  sitemap.xml
dev/: 404.html  index.html  sitemap.xml
docs/: AUTHENTICATION.md  CONFIGURATION.md  DATABASE.md  SUB_TOKENS.md  authentication.md  changelog.md  code-of-conduct.md  configuration.md  contributing.md  database.md  development.md  future-roadmap.md  github-pages-setup.md  implementation-guide.md  index.md  interface-first-design.md  migration-guide.md  quickstart.md  react-integration.md  security.md  sub-tokens.md  versioning-guide.md
gradle/: gradle-daemon-jvm.properties  version.gradle.kts
ori/: 404.html  (+2 more)
(+441 files in other folders)
