[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ogiri-docs"
version = "0.1.0"
description = "Documentation for Ogiri Security"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mike>=2.1.3",
]

[tool.setuptools]
# This is a documentation-only package with no Python code
# Tell setuptools to not search for packages (avoiding gradle/, sample/, etc.)
py-modules = []
