[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ogiri-docs"
version = "3.0.1"
description = "Documentation for Ogiri Security"
requires-python = ">=3.9"
dependencies = [
    "mkdocs-material>=9.7.0",
    "mike>=2.1.3",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.0",
    "mkdocs-redirects>=1.2.2",
]

[tool.setuptools]
# This is a documentation-only package with no Python code
# Tell setuptools to not search for packages (avoiding gradle/, sample/, etc.)
py-modules = []
